Details
-
Bug
-
Resolution: Fixed
-
Major
-
0.4.15-dev-4523-g55c117c https://github.com/reactos/reactos/commit/55c117c4c932ed17d1338c3c56b305915a0fa88f
Description
reactos-bootcd-0.4.15-dev-5297-gb1854d7-x86-gcc-lin-dbg
- From installation on a new VM, FAT partition, 6GB of free space
- Open RAPPS, install AIM
Fails with



(ntoskrnl/se/accesschk.c:711) SepAccessCheck(): Failed to grant access rights. RemainingAccess = 0x00000001 DesiredAccess = 0x00100001
|
(ntoskrnl/io/iomgr/file.c:581) Traverse access failed!
|
(drivers/ksfilter/ks/connectivity.c:281) ZwOpenKey() failed with status 0xc0000034
|
(sdk/lib/drivers/sound/mmixer/controls.c:481) MMixerCountMixerControls PinId 11 is not connected by any node
|
(ntoskrnl/se/accesschk.c:711) SepAccessCheck(): Failed to grant access rights. RemainingAccess = 0x00000180 DesiredAccess = 0x00000180
|
(win32ss/user/ntuser/nonclient.c:1133) err: Wnd is active and not set active!
|
err:(win32ss/user/user32/windows/messagebox.c:1048) MessageBox: L"\\??\\C:\\DOCUME~1\\ADMINI~1\\LOCALS~1\\Temp\\GLF8.tmp is either not designed for ReactOS or it contains an error.\r\nTry reinstalling the application using the original installation media or contact the software vendor for support.\r\n"
|
LDR: LdrpMapDll - call to LdrpCheckForKnownDll("ole32.dll", ...) failed with status c00000a5
|
(dll/win32/kernel32/client/loader.c:386) LoadLibraryExW(ole32.dll) failing with status c00000a5
|
Unhandled exception
|
ExceptionCode: c06d007e
|
CS:EIP 1b:7c627877
|
DS 23 ES 23 FS 3b GS 0
|
EAX: 0012e820 EBX: 0012e890 ECX: 0012e894
|
EDX: c06d006e EBP: 0012e878 ESI: 0010407c ESP: 0012e814
|
EDI: 001754ec EFLAGS: 00000286
|
Address:
|
* <kernel32.dll:7877 (dll/win32/kernel32/client/except.c:737 (RaiseException))> (C:\ReactOS\system32\kernel32.dll@7c620000)
|
Frames:
|
* <shell32.dll:db886 (sdk/lib/delayimp/delayimp.c:120 (__delayLoadHelper2))> (C:\ReactOS\system32\shell32.dll@5a0000)
|
* <shell32.dll:db4cd (:0 (__tailMerge_libole32_delayed_a))> (C:\ReactOS\system32\shell32.dll@5a0000)
|
* <shell32.dll:c17c4 (dll/win32/shell32/wine/pidl.c:1606 (_ILCreateDesktop))> (C:\ReactOS\system32\shell32.dll@5a0000)
|
* <shell32.dll:549a7 (dll/win32/shell32/folders/CDesktopFolder.cpp:209 (CDesktopFolder::FinalConstruct))> (C:\ReactOS\system32\shell32.dll@5a0000)
|
* <shell32.dll:55d6c (sdk/lib/atl/atlcore.h:102 (SHGetDesktopFolder))> (C:\ReactOS\system32\shell32.dll@5a0000)
|
* <shell32.dll:c07d2 (dll/win32/shell32/wine/pidl.c:398 (SHILCreateFromPathW))> (C:\ReactOS\system32\shell32.dll@5a0000)
|
* <shell32.dll:c1334 (dll/win32/shell32/wine/pidl.c:986 (ILCreateFromPathW))> (C:\ReactOS\system32\shell32.dll@5a0000)
|
* <shell32.dll:c1664 (dll/win32/shell32/wine/pidl.c:1128 (SHSimpleIDListFromPathW))> (C:\ReactOS\system32\shell32.dll@5a0000)
|
* <shell32.dll:1f956 (dll/win32/shell32/changenotify.cpp:661 (SHChangeNotify))> (C:\ReactOS\system32\shell32.dll@5a0000)
|
* <shell32.dll:1f942 (dll/win32/shell32/changenotify.cpp:655 (SHChangeNotify))> (C:\ReactOS\system32\shell32.dll@5a0000)
|
<GLC3.tmp:234e> (C:\DOCUME~1\ADMINI~1\LOCALS~1\Temp\GLC3.tmp@10000000)
|
<[invalid address]:3>
|
<[invalid address]:f4ffeff3>
|
err:(win32ss/user/user32/windows/messagebox.c:1048) MessageBox: L"The exception unknown software exception (0xc06d007e) occurred in the application at location 0x7c627877.\r\n\nCliquez sur OK pour terminer le programme."
|
Installs fine in 0.4.15-dev-4522-gf48191b, regressed in 0.4.15-dev-4523-g55c117c (commit by Fraizeraust).
Attachments
Issue Links
- blocks
-
CORE-9174 rpcrt4 relies on default security descriptor when creating pipes
-
- Resolved
-
-
CORE-11059 jZip: Context menu extension is missing
-
- Untriaged
-
- is duplicated by
-
CORE-18660 Amazing Graphic Editor v.1.5 installation fails due to Unhandled exception / ntoskrnl MmAccessFault
-
- Resolved
-
-
CORE-18687 Unable to install 20/20 photo program
-
- Resolved
-
-
CORE-18980 [Regression] Factusol 2002 3.0 Wise Setup is not loading.
-
- Resolved
-
- relates to
-
CORE-18250 Regression: 0.4.15-4523 breaks VirtualBox shared folders map to drive letter
-
- Resolved
-